# ldjam51

./: Cargo.toml  README.md  wasm-setup
assets/: config.json  story.json
src/: main.rs  parsing.rs  selected.rs
src/story/: executor.rs  mod.rs  model.rs  variables.rs
src/ui/: choices.rs  container.rs  mod.rs  prompt.rs  terminal.rs
wasm/: index.html
